force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/Funding_Drawdown_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Stores the line items related to the funding drawdown request records that are initially submitted by the Grant Recipient via the Community. Line item records are associated to Baselines (Baseline/Phase Baselines). Each line item will be uniquely related to a Baseline, and never the same one.</description>
    <label>Funding Drawdown Request Line Item</label>
    <nameField>
        <displayFormat>FDRLI-{000000}</displayFormat>
        <label>Funding Drawdown Request Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Drawdown Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>