force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Admin_Costs__c.field-meta.xml
<CustomField>
    <fullName>Admin_Costs__c</fullName>
    <label>Admin Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>