force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Financial Year or Phase Baseline</inlineHelpText>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipName>Phase_Drawdown_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>