force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Capital_Costs_Only__c.field-meta.xml
<CustomField>
    <fullName>Capital_Costs_Only__c</fullName>
    <label>Capital Costs Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>