force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Does_not_exceed_total_allocated_to_phase__c.field-meta.xml
<CustomField>
    <fullName>Does_not_exceed_total_allocated_to_phase__c</fullName>
    <inlineHelpText>Confirmation that the request for funding does not exceed the total allocated to that phase?</inlineHelpText>
    <label>Does not exceed total allocated to phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>