force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Funding_Drawdown_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Drawdown_Request__c</fullName>
    <description>For Challenge Funds only.</description>
    <label>Funding Drawdown Request</label>
    <referenceTo>Funding_Drawdown_Request__c</referenceTo>
    <relationshipName>Phase_Drawdown_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>