force-app/main/default/objects/Funding_Drawdown_Request_Line_Item__c/fields/Total_Grant_Drawdown_Request__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Drawdown_Request__c</fullName>
    <inlineHelpText>Drawdown amount requested for this line item.</inlineHelpText>
    <label>Total Requested for Line Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>